--- a/arch/arm/configs/sheldon_debug_defconfig
+++ b/arch/arm/configs/sheldon_debug_defconfig
@@ -22,6 +22,9 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_KSM=y
+CONFIG_KSM=y
+CONFIG_UKSM=y
+# CONFIG_KSM_LEGACY is not set
 CONFIG_ZSMALLOC=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="sheldon"
