--- a/arch/arm/configs/sheldon_defconfig
+++ b/arch/arm/configs/sheldon_defconfig
@@ -22,6 +22,8 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
+# CONFIG_KSM_LEGACY is not set
 CONFIG_ZSMALLOC=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
