mt8695: defconfigs: configure and enable SLMK

--- a/arch/arm/configs/sheldon_debug_defconfig
+++ b/arch/arm/configs/sheldon_debug_defconfig
@@ -25,6 +25,9 @@ CONFIG_KSM=y
 CONFIG_KSM=y
 CONFIG_UKSM=y
 # CONFIG_KSM_LEGACY is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=512
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
 CONFIG_ZSMALLOC=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="sheldon"
