--- a/arch/arm/configs/sheldon_defconfig
+++ b/arch/arm/configs/sheldon_defconfig
@@ -24,6 +24,9 @@ CONFIG_HIGHMEM=y
 CONFIG_KSM=y
 CONFIG_UKSM=y
 # CONFIG_KSM_LEGACY is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=512
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
 CONFIG_ZSMALLOC=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
